fix ORA block textarea and radio-button contrast to WCAG complaince.

--- a/openassessment/xblock/static/sass/oa/views/_oa-base.scss
+++ b/openassessment/xblock/static/sass/oa/views/_oa-base.scss
@@ -547,6 +547,7 @@
 
   .submission__answer__part__text__value {
     margin: ($baseline-v/2) 0;
+    border-color: $gray-d7;
 
     &:not(textarea) {
       border: 1px solid $color-decorative-secondary;
